--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="ajeeb"
+        android:label="Penta Events"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
