--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   shimmer: ^1.1.1
   flutter_launcher_icons: ^0.7.5
   flutter_launcher_name: ^0.0.1
+  smooth_star_rating: ^1.0.4+2
+  flutter_datetime_picker: ^1.3.8
+  url_launcher: ^5.4.5
 
   cached_network_image: ^2.2.0
   firebase_storage:
